update api to support send message by tag

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -18,3 +18,5 @@ parameter.identifier.mandatory=Parameter messageIdentifier is mandatory!
 parameter.identifier.length=Parameter messageIdentifier's length must be 32!
 parameter.createRequest.mandatory=Parameter createRequest is mandatory!
 parameter.sns.max.size=Parameter serialNos's max size is 1000!
+parameter.request.mandatory=Parameter request is mandatory!
+tag.mandatory=Tag is mandatory!
