--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
 	<groupId>com.whatspos.sdk</groupId>
     <artifactId>3rdsys-cloudmsg</artifactId>
-	<version>1.5.0</version>
+	<version>1.6.0-SNAPSHOT</version>
 
 	<name>CloudMessage Java SDK</name>
 	<description>CloudMessage Java SDK for Third-party System</description>
@@ -25,9 +25,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
-
-		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
-		<el-impl.version>2.2</el-impl.version>
 		<gson.version>2.3</gson.version>
 		<slf4j-api.version>1.7.12</slf4j-api.version>
 		<commons-io.version>2.4</commons-io.version>
