--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -20,3 +20,7 @@ parameter.createRequest.mandatory=Parameter createRequest is mandatory!
 parameter.sns.max.size=Parameter serialNos's max size is 1000!
 parameter.request.mandatory=Parameter request is mandatory!
 tag.mandatory=Tag is mandatory!
+parameter.sn.tid.required=Either serial number or TID is required!
+parameter.serialNo.mandatory=Parameter serialNo is mandatory!
+parameter.content.mandatory=Parameter content is mandatory!
+parameter.content.too.long=Message content cannot greater than 1024 byte!
