--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
 	<groupId>com.whatspos.sdk</groupId>
     <artifactId>3rdsys-cloudmsg</artifactId>
-	<version>1.5.0</version>
+	<version>1.6.0-SNAPSHOT</version>
 
 	<name>CloudMessage Java SDK</name>
 	<description>CloudMessage Java SDK for Third-party System</description>
@@ -26,14 +26,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
 
-		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
-		<el-impl.version>2.2</el-impl.version>
-		<gson.version>2.3</gson.version>
-		<slf4j-api.version>1.7.12</slf4j-api.version>
-		<commons-io.version>2.4</commons-io.version>
+		<gson.version>2.9.1</gson.version>
+		<slf4j-api.version>2.0.17</slf4j-api.version>
 		<json.version>20160810</json.version>
-		<!-- Plugin Properties-->
-
 		<release-plugin.version>2.5.2</release-plugin.version>
 		<gpg-plugin.version>1.5</gpg-plugin.version>
 		<javadoc-plugin.version>2.10.4</javadoc-plugin.version>
@@ -42,16 +37,7 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-			<version>${hibernate-validator.version}</version>
-        </dependency>
-	    <dependency>
-		    <groupId>org.glassfish.web</groupId>
-		    <artifactId>el-impl</artifactId>
-		    <version>${el-impl.version}</version>
-		</dependency>
+
 		<dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -63,17 +49,24 @@
 			<version>${slf4j-api.version}</version>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>${json.version}</version>
         </dependency>
     </dependencies>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<profiles>
 		<profile>
 			<id>release</id>
@@ -137,6 +130,17 @@
 						<artifactId>maven-release-plugin</artifactId>
 						<version>${release-plugin.version}</version>
 					</plugin>
+					<plugin>
+						<groupId>org.sonatype.central</groupId>
+						<artifactId>central-publishing-maven-plugin</artifactId>
+						<version>0.8.0</version>
+						<extensions>true</extensions>
+						<configuration>
+							<publishingServerId>maven-central-portal</publishingServerId>
+							<autoPublish>true</autoPublish>
+							<waitUntil>published</waitUntil>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -157,20 +161,10 @@
 
 	<developers>
 		<developer>
-			<name>jay</name>
-			<email>tanjie@paxsz.com.com</email>
-			<organization>pax</organization>
+			<name>Jay</name>
+			<email>tanjie@szzolon.com</email>
+			<organization>ZOLON</organization>
 		</developer>
 	</developers>
 
-	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<repository>
-			<id>ossrh</id>
-			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-		</repository>
-	</distributionManagement>
 </project>
